tests/fixtures/positive/supply-chain/version-catalog-unused/settings.gradle.kts
rootProject.name = "version-catalog-unused-positive"

include(":app")
