tests/fixtures/negative/supply-chain/version-catalog-unused/settings.gradle.kts
rootProject.name = "version-catalog-unused-negative"

include(":app")
